# constitution-of-india-RAG-app

./: .gitignore  README.md
back_end/api/: main.py  pyproject.toml  requirements.txt  vercel.json
back_end/app/: data_preparation.py  pyproject.toml  requirements.txt  test.py
back_end/app/demos/: chroma_db_demo.py  pinecone_demo.py
back_end/app/utils/: constants.py  pinecone_db_mng.py
constitution_app/: README.md  pubspec.yaml
constitution_app/android/app/: build.gradle.kts
constitution_app/assets/fonts/: list.py
constitution_app/ios/Runner/: Info.plist
constitution_app/ios/Runner.xcodeproj/: project.pbxproj
constitution_app/lib/: main.dart
constitution_app/lib/controllers/: chat_history_cubit.dart
constitution_app/lib/controllers/chat_data_bloc/: chat_data_bloc.dart  chat_data_events.dart  chat_data_states.dart
constitution_app/lib/controllers/chat_history_bloc/: chat_history_bloc.dart  chat_history_events.dart  chat_history_states.dart
constitution_app/lib/models/: ai_response_model.dart  ai_response_model.freezed.dart  ai_response_model.g.dart  hive_chat_history_msg_model.dart  hive_chat_history_msg_model.g.dart  message_model.dart  message_model.freezed.dart  message_model.g.dart
constitution_app/lib/services/: ai_generation_service.dart  chat_history_local_storage_service.dart
constitution_app/lib/utils/: constants.dart  hive_config.dart
constitution_app/lib/view/: chat_history_screen.dart  home_screen.dart  splash_screen.dart
constitution_app/test/: service_test.dart  widget_test.dart
(+3 files in other folders)
